# fdi-pln2612

./: .gitignore  README.md  app.py  estado_butler.json  requirements.txt
p1/: README.md  estado_butler.json  pyproject.toml
p1/src/fdi_pln_2612_p1/: __init__.py  butler_api.py  config.py  http_client.py  llm.py  main.py  models.py  protocol.py  strategy.py
p2/: README.md
p2-g12/: README.md
p3/: fdi-pln-2612-p3.py  salida_larga.txt  salida_noticia.txt  salida_principal.txt
p4/: .gitignore  2000-desde-PROLOGO.txt  README.md  main.py  pyproject.toml
p4/src/fdi_pln_2612_p4/: corpus_loader.py  embeddings.py  ir_clasico.py  main.py  modelos.py  nlp_utils.py  rag.py  ui_terminal.py
p4/src/fdi_pln_2612_p4/data/: __init__.py
p5/: .gitignore  README.md  attention.py  main.py  p5_causal_2612.pth  p5_ner_2612.pth  pyproject.toml  train.py
p5/data_ner/: corpus_tag.json
p5/src/: __init__.py  attention.py  causal_llm.py  causal_train.py  cli.py  data.py  model.py  ner.py  tokenizer.py  transformer.py
p5/tests/: test_attention.py  test_causal_llm.py  test_tokenizer.py
