[project]
name = "fdi_pln_2612_p1"
version = "1.0"
description = "Agente PLN - Practica 1"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "pydantic>=2.6",
  "ollama>=0.3",
  "click>=8",
]

[project.scripts]
fdi-pln-2612-p1 = "fdi_pln_2612_p1.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"