[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fdi-pln-2612-p4"
version = "1.0"
description = "Practica 4 de PLN - Grupo 12"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl",
    "ollama>=0.5.1",
    "rich>=13.9.4",
    "spacy>=3.8.11",
]

[project.scripts]
fdi-pln-2612-p4 = "fdi_pln_2612_p4.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fdi_pln_2612_p4"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/uv.lock",
    "/src/fdi_pln_2612_p4",
]
