[project]
name = "fdi-pln-2612-p5"
version = "1.0"
description = "P5: LLM causal, generacion y NER"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "loguru>=0.7",
    "numpy>=1.26",
    "typer>=0.12",
    "torch",
]

[project.scripts]
fdi-pln-2612-p5 = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- AÑADE ESTO PARA ARREGLAR EL ERROR DE HATCHLING ---
[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
# Si usas torchvision o torchaudio, añádelos aquí también:
# torchvision = { index = "pytorch-cu121" }
# torchaudio = { index = "pytorch-cu121" }