[project]
name = "fdi-pln-2612-p5"
version = "1.0"
description = "P5: LLM causal, generacion y NER"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "loguru>=0.7",
    "numpy>=1.26",
    "typer>=0.12",
    "torch>=2.5.1",
]

[project.scripts]
fdi-pln-2612-p5 = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
